<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/progresTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="20%" />

    <Button
        android:id="@+id/dugmePredaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/predaj"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/progresTekst"/>

</RelativeLayout>